barra de progreso

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <h1>Descubre tu estilo decorativo ideal</h1>
+    <div class="progress-container">
+    <div class="progress-label">
+        Pregunta <span id="current-question">1</span> de <span id="total-questions">5</span>
+    </div>
+    <div class="progress-bar-bg">
+        <div class="progress-bar-fill" id="progress-bar"></div>
+    </div>
+</div>
     <div class="progress">
         Pregunta <span id="current-question">1</span> de <span id="total-questions">5</span>
     </div>
